--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.63.4",
     "react-native-gesture-handler": "^1.10.1",
     "react-native-image-mapper": "^0.1.11",
+    "react-native-vector-icons": "^8.0.0",
     "react-navigation": "^4.4.3",
     "reactotron-react-native": "^5.0.0",
     "styled-components": "^5.2.1"
