--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
     "axios": "^0.21.1",
     "native-base": "^2.15.2",
     "prop-types": "^15.7.2",
@@ -17,6 +18,9 @@
     "react-native": "0.63.4",
     "react-native-gesture-handler": "^1.10.1",
     "react-native-image-mapper": "^0.1.11",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^2.17.1",
     "react-native-vector-icons": "^8.0.0",
     "react-navigation": "^4.4.3",
     "reactotron-react-native": "^5.0.0",
