--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
     "react-native-vector-icons": "^8.0.0",
+    "react-native-webview": "^11.2.3",
     "react-navigation": "^4.4.3",
     "reactotron-react-native": "^5.0.0",
     "styled-components": "^5.2.1"
